Added DAL and Model Classes

--- a/VideoGameLibrary/VideoGameLibrary.csproj
+++ b/VideoGameLibrary/VideoGameLibrary.csproj
@@ -143,9 +143,16 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\DataSettings.cs" />
+    <Compile Include="DAL\IVideoGameDataServices.cs" />
+    <Compile Include="DAL\IVideoGameRepository.cs" />
+    <Compile Include="DAL\VideoGameRepository.cs" />
+    <Compile Include="DAL\VideoGameXmlDataService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\VideoGame.cs" />
+    <Compile Include="Models\VideoGames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -187,9 +194,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
