Fixed Adding new record to xml file not incrementing ID. Updated Display name for ReleaseYear. Added edit functionality to contoller and added corresponding edit view.

--- a/VideoGameLibrary/VideoGameLibrary.csproj
+++ b/VideoGameLibrary/VideoGameLibrary.csproj
@@ -208,6 +208,7 @@
     <Content Include="Views\VideoGame\Index.cshtml" />
     <Content Include="Views\VideoGame\Details.cshtml" />
     <Content Include="Views\VideoGame\Create.cshtml" />
+    <Content Include="Views\VideoGame\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
